# CrystalPilot

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  BL12_ADnED_2D_4x4.bob  BL12_ADnED_2D_4x4.macros  CODEBASE_REPORT.md  DEVELOPMENT.md  HANDOFF.md  MULTI_BEAMLINE_PLAN.md  MULTI_TECHNIQUE_P2_REMAINING.md  MULTI_TECHNIQUE_PLAN.md  README.md  SESSION_2026-03-30.md  SESSION_2026-03-31.md  SESSION_2026-03-31_session3.md  SESSION_2026-04-01_session2.md  SESSION_2026-06-04_gates-safety-merge.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build-test.yml  cleanup.yml  release-version.yml
dockerfiles/: Dockerfile
docs/: adding_a_beamline.md  adding_a_technique.md  conf.py  parallel_development.md  perf-instrument-status-plan.md
docs/architecture/: README.md  agent.md  app.md  beamlines.md  core.md  techniques.md
docs/archive/: CODEBASE_REPORT.md
docs/sessions/: SESSION_2026-03-31.md  SESSION_2026-03-31_session2.md  SESSION_2026-03-31_session4.md  SESSION_2026-04-01.md  SESSION_2026-04-04.md  SESSION_2026-04-06.md  SESSION_2026-05-19-multibeamline-1.md  SESSION_2026-05-20-peak-selection.md  SESSION_2026-06-02-multitechnique-P0.5.md  SESSION_2026-06-02-multitechnique-P0.md  SESSION_2026-06-02-multitechnique-P1a.md  SESSION_2026-06-02-multitechnique-P1b.md  SESSION_2026-06-02-multitechnique-P2.md  SESSION_2026-06-03-multitechnique-overnight.md
docs/web/: docusaurus.config.js
docs/web/docs/: readme.md
examples/: datatable.py  datatable_virtual.py
scripts/: crawl_ornl_docs.py  git_utils.py  run_trame.sh  xml_utils.py  xml_utils_prototype.py
scripts/cp_bench/: README.md  __init__.py  __main__.py  batch.py  compare.py  cutoff.py  discover.py  metrics.py  models.py  record.py  reduce.py  reduce_config.py  safety.py
scripts/cp_bench/adapters/: __init__.py  mantid_metadata.py  pipeline_engine.py  reducescd.py
src/exphub/agent/: __init__.py  agent.py  bridge.py  confirmation.py  constants.py  core_aliases.py  handlers.py  llm.py  mcp_service.py  rag.py  schema_gen.py  state.py  tools.py  utils.py  validation.py  workflow.py
src/exphub/agent/knowledge/: beamline_guide.md
src/exphub/agent/prompts/: composer.py  core_identity.md  system_prompt.md
src/exphub/app/: main.py  mvvm_factory.py
src/exphub/app/fixtures/: optimizer_fallback_angles.json
src/exphub/app/models/: EICClient.py  angle_plan.py  angle_plan_engine.py  chat.py  css_status.py  data_analysis.py  eic_client.py  eic_control.py  experiment_info.py  gonio_pvs.py  main_model.py  newtabtemplate.py  temporal_analysis.py
src/exphub/app/view_models/: angle_plan.py  chat.py  (+2 more)
src/exphub/beamlines/: __init__.py
src/exphub/core/: __init__.py
src/exphub/techniques/: __init__.py
tests/: conftest.py  datatable.py  test-vdatatable.py  test_acceptance.py  test_agent.py  test_agent_eval.py  test_app.py  test_beamline_coupling.py  test_confirmation_gate.py  test_eic_client_characterization.py  test_eic_row_builder.py  test_hygiene_ratchet.py  test_import_boundaries.py  test_model.py  test_multi_beamline.py  test_multi_technique.py  test_peak_selectors.py  test_selector_gating.py  test_startup_beamline.py  test_tab_layout.py  test_tab_overrides.py  test_technique_config.py  test_technique_coupling.py  test_technique_manifest.py  test_viewmodel_surface.py
tests/cp_bench/: conftest.py  test_batch.py  test_compare.py  test_cutoff.py  test_discover.py  test_metrics.py  test_record.py  test_reduce_config.py  test_safety.py
tests/php/: index.php  readme
tests/techniques/sans/: test_sans_flexible_strategy.py  test_sans_golden_path_eic.py  test_sans_models.py  test_sans_tab_layout.py
tests/techniques/single_crystal/: test_eic_row_builder.py  test_golden_path_temporal.py  test_peak_selectors.py  test_sc_golden_path_eic.py
xml/: tool.xml
(+96 files in other folders)
