[project]
name = "exphub"
version = "0.2.2"
description = "CrystalPilot Project"
authors = []
readme = "README.md"
license = "MIT"
keywords = ["NDIP", "NOVA", "python"]
requires-python = ">=3.10,<3.14"

[tool.pixi.workspace]
channels = ["conda-forge", "mantid"]
platforms = ["linux-64", "osx-64"]

[tool.pixi.environments]
default = {features = ["dev"], solve-group = "default"}
production = {features = [], solve-group = "default"}

[tool.pixi.dependencies]
mantid = ">=6.14.0,<7"
setuptools = ">=80.9.0,<81"

[tool.pixi.pypi-dependencies]
exphub = { path = ".", editable = true }
hatch = "*"
gitpython = ">=3.1.40,<4"
python-gitlab = ">=5.6.0,<6"
nova-trame = "*"
nova-epics = { version = ">=0.2.2", extras = ["trame"] }
pandas = ">=2.2.3"
plotly = ">=6.0.0"
scikit-learn = ">=1.6.1"
trame-plotly = ">=3.1.0"
trame-datagrid = ">=0.2.2"
cryptography = ">=46.0.3,<47"
# Agent dependencies
python-dotenv = ">=1.0.0"
langchain = ">=0.3.0"
langchain-core = ">=0.3.0"
langchain-google-genai = ">=2.0.0"
langchain-ollama = "*"
langchain-openai = "*"
langgraph = ">=0.4.0"
jsonschema = "*"


[tool.pixi.feature.dev.pypi-dependencies]
mypy = ">=1.10.0"
pre-commit = ">=2.20.0"
coverage = ">=6.4.3"
pytest = "*"
ruff = ">=0.6.2"
copier=">=9.3"
sphinx = "*"
sphinx-rtd-theme = "==3.0.2"
sphinxcontrib-napoleon ="*"
tomli = "*"

[tool.pixi.tasks]
# Launch by the package's canonical name. Running it as ``src.exphub.app``
# imports a SECOND copy of the package (separate module state from the
# ``exphub`` the code imports absolutely), so registry/technique discovery
# populated one copy while the app read the other — beamline selection at
# startup silently failed. ``exphub.app`` keeps everything on one copy.
app = "python -m exphub.app"
init-repo = "python -m scripts.git_utils"
deploy-production = "python -m scripts.xml_utils"
deploy-prototype = "python -m scripts.xml_utils_prototype"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exphub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__"]

[tool.ruff]
extend-exclude = [".pixi"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "D102", # Missing docstring in public function
    "D103", # Missing docstring in public method
    "D401"  # imperative mood

]

[tool.ruff.lint.extend-per-file-ignores]
'__init__.py' = ['D104'] # Missing docstring in public package

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_defs = true
ignore_errors = false
disable_error_code = ["import-untyped"]
# You can exclude files with the following (ONLY WHEN NECESSARY)
# exclude = ["path/to/file"]

# The MCP SDK is an optional dependency, lazy-imported under a try/except in
# agent/mcp_service.py and absent from the type-checking environment. Its names
# are used in annotations and isinstance checks, so treat the missing import as
# untyped (Any) rather than failing the whole check with import-not-found.
[[tool.mypy.overrides]]
module = ["mcp", "mcp.*"]
ignore_missing_imports = true

[tool.coverage.report]
omit = [
    '*__init__*', # __init__ files should just re-export other classes and functions
]

[tool.coverage.run]
command_line = "-m pytest --junit-xml=reports/junit.xml"
data_file = "reports/.coverage"
